# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import authRouter from "./auth";
 import styleRouter from "./style";
 import productsRouter from "./products";
+import sessionsRouter from "./sessions";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(authRouter);
 router.use(styleRouter);
 router.use(productsRouter);
+router.use(sessionsRouter);
 
 export default router;
